Adapt to sprig-boot-3